# bailiwick-ui

./: .babelrc  .dockerignore  .editorconfig  .ghci  .gitignore  Dockerfile  README.md  bailiwick.cabal  build.sh  cabal.project  default.nix  deploy.nix  gorbachev.yaml  javascript.nix  makefile  nix-gorbachev.conf  nix.conf  node-packages.nix  package-lock.json  package.json  webpack.config.babel.js  webpack.config.js
app/: Main.hs  MakeMapCss.hs  validate.hs
css/: _base-map.scss  _button-group.scss  _central-content.scss  _common.scss  _dropdown-invert.scss  _embed.scss  _export.scss  _footer.scss  _header.scss  _legend.scss  _styles.scss  _themes.scss  _toolbar-filter.scss  _tourism-splitbar.scss  _whole-body.scss  app.scss  default.nix  test.css
css/base/: _base.scss  _buttons.scss  _fontello.scss  _forms.scss  _tables.scss  _typography.scss  _variables.scss
css/bourbon/css3/: _flex-box.scss
css/components/: _area-summary.scss  _area-treemap.scss  _basic-barchart.scss  _border-switch.scss  _chart-options.scss  _compare-menu.scss  _default-timeseries.scss  _download-menu.scss  _embed-menu.scss  _embed_popup_form.scss  _export-dialog.scss  _houseprice-timeseries.scss  _indicator-chart.scss  _indicator-map.scss  _indicator-summary.scss  _indicators-button.scss  _navigation-map.scss  _overunder-barchart.scss  _share-menu.scss  _table-button.scss  _table-view.scss  _toolbar-filter.scss  _zoom-controls.scss
css/config/: _breakpoints.scss  _colours.scss  _images.scss  _mixins.scss  _regions.scss
css/elements/: _buttons.scss  _logo.scss
css/fonts/fontello-af382b9d/: config.json  demo.html
css/mixins/: _dropdown.scss  _icons.scss
css/modifiers/: _fonts.scss  _icons.scss
css/node2nix/: node-packages.json  node-packages.nix
css/plugins/: _chosen.scss
css/theme/: _rear.scss
db/: area-summaries.r  areas.r  default.nix  functions.r  indicator-numbers.r  language.r  makefile  patch.r  themes.r
db/config/: themes.yaml
db/config/indicators/: agricultural-gdp.yaml  area-in-farms.yaml  business-by-firm-size.yaml  change-in-car-registrations.yaml  crime-victimisation.yaml  deprivation-index.yaml  earnings-by-industry.yaml  employment-by-industry.yaml  employment-by-occupation.yaml  employment-number.yaml  employment-rate.yaml  gdp-by-industry.yaml  gdp-per-capita.yaml  guest-nights-per-capita.yaml  ham-buy.yaml  ham-rent.yaml  household-income-distribution.yaml  household-income-mean.yaml  household-income-median.yaml  income-estimates-by-age.yaml  income-estimates-by-sex.yaml  international-migration.yaml  international-visitor-nights.yaml  international-visits.yaml  internet-access.yaml  labour-force-participation-number.yaml  labour-force-participation.yaml  life-expectancy-at-birth-by-sex.yaml  mean-house-value.yaml  national-standards.yaml  ncea-level2.yaml  neet-number.yaml  neet.yaml  new-building-consents.yaml  new-dwellings.yaml  occupancy-rate.yaml  population-by-ethnicity.yaml  population-in-age-group.yaml  population.yaml  primary-sector-shares-of-regional-gdp.yaml  (+18 more)
db/data/: ANZSCO.rda  ANZSIC06.rda  NZSIOC.rda  Origin2Type.rda
js/: main.js
js-src/: index.js
js-src/cache/: cache-store.js
js-src/charts/: indicator-area-treemap.js  indicator-barchart.js  indicator-over-under-barchart.js  indicator-timeseries.js  map-legend.js  over-under-barchart.js  summary-timeseries.js
js-src/utils/: caption-formatter.js  chart-setup.js  formatting.js  text.js  utils.js
js/modules/time-series/: default-time-series.js  home-time-series.js
src/: Bailiwick.hs
src/Bailiwick/: Application.hs  AreaTrees.hs  Devel.hs  Javascript.hs  Route.hs  State.hs  Store.hs  Types.hs  View.hs
src/Bailiwick/View/: AreaSummary.hs  Compare.hs  ExportMenu.hs  Header.hs  IndicatorChart.hs  IndicatorSummary.hs  IndicatorTable.hs  Indicators.hs  Map.hs  MapLegend.hs  Text.hs  ToolBar.hs  Widgets.hs
static/: bailiwick.bundle.js  bailiwick.bundle.js.map  bailiwick.js  bailiwick.min.js  iframeResizer.contentWindow.min.js  index.html  map.css  map.css.tmpl  modernizr.custom.30140.js  teal-skua.css  vendor.css
static/data/: applications-11d88bc13.json  areaSummaries-11d88bc13.json  areaSummaries-1b7549470.json  areaTrees-11d88bc13.json  areaTrees.json  areas-11d88bc13.json  areas-1b7549470.json  datafiles-11d88bc13.json  features-11d88bc13.json  features.json  indicators-11d88bc13.json  indicators-dev.json  slices-11d88bc13.json  themes-11d88bc13.json  themes-dev.json  years-11d88bc13.json
static/data/applications/: default-11d88bc13.json
static/data/areaSummaries/: ashburton-11d88bc13.json  auckland-11d88bc13.json  bay-of-plenty-11d88bc13.json  buller-11d88bc13.json  canterbury-11d88bc13.json  carterton-11d88bc13.json  central-hawkes-bay-11d88bc13.json  central-otago-11d88bc13.json  christchurch-11d88bc13.json  clutha-11d88bc13.json  dunedin-11d88bc13.json  far-north-11d88bc13.json  gisborne-11d88bc13.json  gore-11d88bc13.json  grey-11d88bc13.json  hamilton-11d88bc13.json  hastings-11d88bc13.json  hauraki-11d88bc13.json  hawkes-bay-11d88bc13.json  horowhenua-11d88bc13.json  hurunui-11d88bc13.json  invercargill-11d88bc13.json  kaikoura-11d88bc13.json  kaipara-11d88bc13.json  kapiti-coast-11d88bc13.json  kawerau-11d88bc13.json  lower-hutt-11d88bc13.json  mackenzie-11d88bc13.json  manawatu-11d88bc13.json  manawatu-wanganui-11d88bc13.json  marlborough-11d88bc13.json  masterton-11d88bc13.json  matamata-piako-11d88bc13.json  napier-11d88bc13.json  nelson-11d88bc13.json  new-plymouth-11d88bc13.json  new-zealand-11d88bc13.json  northland-11d88bc13.json  opotiki-11d88bc13.json  otago-11d88bc13.json  (+38 more)
static/data/areaTrees/: agriculture-percentage-share-of-regional-gdp-2000-11d88bc13.json  agriculture-percentage-share-of-regional-gdp-2001-11d88bc13.json  agriculture-percentage-share-of-regional-gdp-2002-11d88bc13.json  agriculture-percentage-share-of-regional-gdp-2003-11d88bc13.json  (+600 more)
static/data/areas/: auckland-11d88bc13.json  (+97 more)
static/fonts/: GustanWeb-Bold.eot  GustanWeb-Book.eot  GustanWeb-Light.eot  GustanWeb-Medium.eot  GustanWeb-Thin.eot  mbie-rea.eot
static/images/: ring.img.md
(+33805 files in other folders)
