name:                bailiwick
version:             0.1.0.0
homepage:            https://github.com/dragonfly-science/bailiwick
author:              Finlay Thompson
maintainer:          finlay@dragonfly.co.nz
copyright:           Dragonfly (2018)
category:            web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bailiwick.Devel
                       Bailiwick
                       Bailiwick.Store
                       Bailiwick.Types
                       Bailiwick.State
                       Bailiwick.Route
                       Bailiwick.View
                       Bailiwick.View.AreaSummary
                       Bailiwick.View.Header
                       Bailiwick.View.Indicators
                       Bailiwick.View.IndicatorSummary
                       Bailiwick.View.Map
                       Bailiwick.View.ToolBar
                       Bailiwick.Application

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bimap
                     , binary
                     , bytestring
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , ghcjs-dom
                     , hashable
                     , http-media
                     , http-types
                     , Interpolation
                     , jsaddle
                     , jsaddle-warp
                     , lens
                     , mtl
                     , insert-ordered-containers
                     , process
                     , QuickCheck
                     , reflex
                     , reflex-dom-contrib
                     , reflex-dom-core
                     , servant
                     , servant-reflex
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , uri-bytestring
                     , vector
                     , wai
                     , wai-app-static
                     , wai-extra
                     , warp
                     , websockets
--  if os( osx ) && !impl( ghcjs )
--    build-depends:     jsaddle-wkwebview
--  else
  build-depends:     jsaddle-warp
  default-language:    Haskell2010
  ghc-options: -Wall

executable bailiwick
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -dynamic
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , ghcjs-dom
                     , http-types
                     , mtl
                     , reflex-dom-core
                     , text
                     , wai
                     , wai-app-static
                     , warp
                     , websockets
                     , bailiwick
--  if os( osx ) && !impl( ghcjs )
--    build-depends:     jsaddle-wkwebview
--  else
  build-depends:     jsaddle-warp
  if impl(ghcjs)
    ghc-options:       -dedupe
    cpp-options:       -DGHCJS_BROWSER
    -- -DGHCJS_GC_INTERVAL=60000 -DGHCJS_SCHED_CHECK=100000
  default-language: Haskell2010

executable make-map-css
  if impl( ghcjs )
    buildable: False
  hs-source-dirs: app
  main-is: MakeMapCss.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , mtl
                     , text
                     , bailiwick
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/dragonfly-science/bailiwick-ui
