name:                bailiwick
version:             0.1.0.0
homepage:            https://github.com/dragonfly-science/bailiwick
author:              Finlay Thompson
maintainer:          finlay@dragonfly.co.nz
copyright:           Dragonfly (2018)
category:            web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bailiwick
                       Bailiwick.AreaTrees
                       Bailiwick.Route
                       Bailiwick.State
                       Bailiwick.Store
                       Bailiwick.Types
                       Bailiwick.View
                       Bailiwick.View.AreaSummary
                       Bailiwick.View.Header
                       Bailiwick.View.IndicatorChart
                       Bailiwick.View.IndicatorSummary
                       Bailiwick.View.Indicators
                       Bailiwick.View.Map
                       Bailiwick.View.ToolBar
                       Bailiwick.View.Text
                       Bailiwick.Application
                       Bailiwick.Devel

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bimap
                     , binary
                     , bytestring
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , ghcjs-dom
                     , hashable
                     , http-media
                     , http-types
                     , Interpolation
                     , jsaddle
                     , jsaddle-warp
                     , lens
                     , mtl
                     , insert-ordered-containers
                     , pretty-show
                     , process
                     , QuickCheck
                     , reflex
                     , reflex-dom-contrib
                     , reflex-dom-core
                     , servant
                     , servant-reflex
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , uri-bytestring
                     , vector
  if !impl( ghcjs )
      build-depends:   wai
                     , wai-app-static
                     , wai-extra
                     , warp
                     , websockets
  default-language:    Haskell2010
  ghc-options: -Wall


source-repository head
  type:     git
  location: https://github.com/dragonfly-science/bailiwick-ui
