name:                bailiwick-lib
version:             0.1.0.0
homepage:            https://github.com/dragonfly-science/bailiwick
author:              Finlay Thompson
maintainer:          finlay@dragonfly.co.nz
copyright:           Dragonfly (2018)
category:            web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bailiwick
                       Bailiwick.AreaTrees
                       Bailiwick.Route
                       Bailiwick.State
                       Bailiwick.Store
                       Bailiwick.Types
                       Bailiwick.Javascript
                       Bailiwick.View
                       Bailiwick.View.AreaSummary
                       Bailiwick.View.Header
                       Bailiwick.View.IndicatorChart
                       Bailiwick.View.IndicatorSummary
                       Bailiwick.View.Indicators
                       Bailiwick.View.Map
                       Bailiwick.View.MapLegend
                       Bailiwick.View.ToolBar
                       Bailiwick.View.Text
                       Bailiwick.Application
                       Bailiwick.Devel

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bimap
                     , binary
                     , bytestring
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , ghcjs-dom
                     , hashable
                     , http-media
                     , http-types
                     , Interpolation
                     , jsaddle
                     , jsaddle-warp
                     , lens
                     , mtl
                     , insert-ordered-containers
                     , pretty-show
                     , process
                     , QuickCheck
                     , reflex
                     , reflex-dom-contrib
                     , reflex-dom-core
                     , servant
                     , servant-reflex
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , uri-bytestring
                     , vector
  if !impl( ghcjs )
      build-depends:   wai
                     , wai-app-static
                     , wai-extra
                     , warp
                     , websockets
  default-language:    Haskell2010
  ghc-options: -Wall

executable bailiwick
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , ghcjs-dom
                     , http-types
                     , jsaddle-warp
                     , mtl
                     , reflex-dom-core
                     , text
                     , bailiwick-lib
  if impl(ghcjs)
    ghc-options:       -dedupe
    cpp-options:       -DGHCJS_BROWSER
    -- -DGHCJS_GC_INTERVAL=60000 -DGHCJS_SCHED_CHECK=100000
  else
    ghc-options:       -dynamic
  default-language: Haskell2010

executable bailiwick-validate
  hs-source-dirs: app
  main-is: validate.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , aeson
                     , filepath
                     , text
                     , bailiwick-lib
  if impl(ghcjs)
    ghc-options:       -dedupe
    cpp-options:       -DGHCJS_BROWSER
    -- -DGHCJS_GC_INTERVAL=60000 -DGHCJS_SCHED_CHECK=100000
  else
    ghc-options:       -dynamic
  default-language: Haskell2010


source-repository head
  type:     git
  location: https://github.com/dragonfly-science/bailiwick-ui
